Trying to fill goodNameStartings with the first 2 letters of a name and then a list of letters that follow after those 2 letters.

--- a/nameGenerator.csproj
+++ b/nameGenerator.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="nameDictionary.cs" />
+    <Compile Include="nameAnalyser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
